@@ -1,6 +1,7 @@
 Revision history for Perl extension {{$dist->name}}
 
 {{$NEXT}}
+  - Remove dependency on Moose::Autobox in tests [kentnl; GH #4]
 
 2.000005  2014-08-03
   - Enforce a runtime dependency on Test::Synopsis [dolmen; gh-3]
